--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ ul {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    min-width: 97vw;
+    /*min-width: 97vw;*/
 }
 
 /* Small */
