--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,24 @@ ul {
     padding-bottom: 30px;
 
 }
+
+.small-heading {
+    text-align: center;
+    line-height: 2;
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+.small-heading h2 {
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 20px;
+    }
+.small-heading p{
+    color: #777;
+
+}
+
 /*end components*/
 /*start header*/
 header {
@@ -523,3 +541,133 @@ section.about-us .container {
     margin: auto;
 }
 /*end projects*/
+
+/*start skills*/
+
+.skills {
+    padding-top: var(--section-padding);
+    padding-bottom: var(--section-padding);
+}
+
+.skills .container{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    max-width: 100%;
+}
+@media (max-width: 768px) {
+    .skills .container {
+        flex-direction: column;
+        max-width: 80%;
+    }
+}
+.testi{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+    position: relative;
+
+}
+
+
+
+.testi img {
+    width:100px;
+    border-radius: 50%;
+    margin-right: 30px;
+}
+
+.testi .text {
+    border-bottom: 1px solid #777;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+}
+.testi .text p{
+    line-height: 1.3;
+    font-size: 15px;
+}
+
+.testi .text span{
+    margin-top: 20px;
+    align-self: flex-end;
+    color:#777777;
+}
+
+.prog-holder {
+    padding-bottom: 30px;
+}
+
+.prog-holder .prog{
+    height:30px ;
+    background-color: #dedadc;
+}
+
+.prog-holder .prog span{
+    background-color: var(--main-color);
+    height: 30px;
+    position: relative;
+    display: block;
+    position: relative;
+}
+.prog-holder .prog span:before {
+    content: attr(data-progress);
+    position: absolute;
+    top: -35px;
+    right: -15px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 4px;
+}
+
+.prog-holder .prog span:after {
+    content: "";
+    width: 0px;
+    border: 10px solid;
+    border-color: black transparent transparent transparent;
+    position: absolute;
+    right: -9px;
+    top: -10px;
+}
+
+.quote {
+    background: url("../images/quote.jpg");
+    background-size: cover;
+    height:300px;
+    position: relative;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    color: white;
+}
+
+.quote .container {
+    display: flex;
+    flex-direction: column;
+    line-height: 2;
+}
+
+.quote .overlay {
+    background-color: rgba(0 0 0 /60%);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+q {
+    position: relative;
+    font-size: 30px;
+    z-index: 10;
+}
+
+.quote span {
+    position: relative;
+    z-index: 10;
+}
+/*end quote*/
